# pydantic-touchall

./: LICENSE  README.md  pyproject.toml
examples/: test_models.py
src/pydantic_touchall/: __init__.py  checker.py  cli.py
tests/: test_checker.py
