[project]
name = "pydantic-touchall"
version = "0.1.0"
description = "Linter to check if all BaseModel fields are assigned"
readme = "README.md"
authors = [
    { name = "Hiromu Nakamura", email = "hiromu.nakamura.001@layerx.co.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
pydantic-touchall = "pydantic_touchall.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
